# hand-gesture-recognition-mediapipe

./: app.py  pyproject.toml
mediapipe/: export_torchscript.py  filter_top_classes.py  labels.py  mediapipe_dataset.py  mediapipe_extract_features.py  mediapipe_train.py  test_augmentation.py
model/: __init__.py
model/keypoint_sequence_classifier/: keypoint_sequence_classifier.py
model_to_ui/: run_realtime_sign.py
scripts/: build.ps1
tools/: inspect_model.py  poetry_build.py
